[tool.poetry]
name = "fuzzy-lightning"
version = "0.1.5"
description = "Perform fast approximate string matching."
license = "MIT"
authors = ["Tom Matthews <tomukmatthews@gmail.com>"]
readme = "README.md"
packages = [{include = "fuzzy_lightning"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
sparse-dot-topn = ">=0.3.1"
scipy = ">=1.7.0"
pybind11 = ">=2.6.0"
scikit-learn = ">=1.0.2"

[tool.poetry.dev-dependencies]
twine = "^4.0.2"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-icdiff = "^0.6"
pyinstrument = "^4.4.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 120
skip-string-normalization = 1 

[tool.isort]
line_length = 120
profile = "black"

[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.6.1"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["cp36-*", "cp37-*"]
